fix styles - dark mode

--- a/Components/GalleryPictures/GalleryPictures.module.css
+++ b/Components/GalleryPictures/GalleryPictures.module.css
@@ -5,7 +5,8 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin: 0 auto;
+    margin: 40px auto;
+    background-color: #fff;
 }
 .gallery__image__horizontal__small{
     margin: 10px 10px;
